[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Dice.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Buttons/3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Press/3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Hover/13.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Press/21.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Buttons/8.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Hover/4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Press/4.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Hover/15.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Buttons/5.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Hover/11.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Buttons/19.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Press/10.png" type="Texture" id=14]
[ext_resource path="res://Fonts/sixty.tres" type="DynamicFont" id=15]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
tile = "res://Scenes/Tile.tscn"
piece = "res://Scenes/Player.tscn"
fade = "res://Scenes/FadeMessage.tscn"
home = "res://Scenes/Home.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1118.0
margin_bottom = 545.0
color = Color( 0, 0, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiceBorder" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="DiceBorder"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bk" type="ColorRect" parent="DiceBorder"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 0, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoardBorder" type="Node2D" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="BoardBorder"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bk" type="ColorRect" parent="BoardBorder"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 0, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Black" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="White" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Turn" type="Label" parent="."]
margin_left = 30.8222
margin_top = 24.5797
margin_right = 106.822
margin_bottom = 50.5797
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dice" parent="." instance=ExtResource( 2 )]

[node name="EndScreen" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="background" type="ColorRect" parent="EndScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="EndScreen/background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -61.0
margin_right = 60.0
margin_bottom = 61.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgain" type="TextureButton" parent="EndScreen/background/HBoxContainer"]
margin_right = 120.0
margin_bottom = 122.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" type="TextureButton" parent="EndScreen/background/HBoxContainer"]
margin_left = 124.0
margin_right = 245.0
margin_bottom = 122.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EndScreen/background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -191.543
margin_top = 28.8914
margin_right = -151.543
margin_bottom = 42.8914
custom_fonts/font = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="TextureButton" parent="EndScreen"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -89.3028
margin_top = 7.22284
margin_right = 30.6973
margin_bottom = 129.223
rect_scale = Vector2( 0.680001, 0.680001 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="EndScreen"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -89.3028
margin_top = 7.22284
margin_right = 30.6973
margin_bottom = 129.223
rect_scale = Vector2( 0.680001, 0.680001 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseMode" type="ColorRect" parent="EndScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="EndScreen/ChooseMode"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -185.0
margin_top = -37.0
margin_right = 185.0
margin_bottom = 37.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Normal" type="Button" parent="EndScreen/ChooseMode/HBoxContainer"]
margin_right = 204.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 15 )
text = "Normal"

[node name="Other" type="Button" parent="EndScreen/ChooseMode/HBoxContainer"]
margin_left = 208.0
margin_right = 370.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 15 )
text = "Other"

[node name="Label" type="Label" parent="EndScreen/ChooseMode"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -275.5
margin_top = 30.6971
margin_right = 275.5
margin_bottom = 98.6971
custom_fonts/font = ExtResource( 15 )
text = "Choose Game Mode"
[connection signal="button_up" from="EndScreen/background/HBoxContainer/PlayAgain" to="." method="_on_PlayAgain_button_up"]
[connection signal="button_up" from="EndScreen/background/HBoxContainer/Home" to="." method="_on_Home_button_up"]
[connection signal="button_up" from="EndScreen/Menu" to="." method="_on_Menu_button_up"]
[connection signal="button_up" from="EndScreen/Back" to="." method="_on_Back_button_up"]
[connection signal="button_up" from="EndScreen/ChooseMode/HBoxContainer/Normal" to="." method="_on_Normal_button_up"]
[connection signal="button_up" from="EndScreen/ChooseMode/HBoxContainer/Other" to="." method="_on_Other_button_up"]
